# i18n

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-unittest.yml  python-package.yml  release.yml
docs/: .buildinfo  api-reference.html  fontfinder.html  genindex.html  index.html  localizer.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage-ja.html  usage-no-i18n-ja.html  usage-no-i18n.html  usage.html
docs/.doctrees/: api-reference.doctree  environment.pickle  fontfinder.doctree  index.doctree  localizer.doctree  usage-advanced-ja.doctree  usage-ja.doctree  usage-no-i18n-ja.doctree  usage-no-i18n.doctree  usage.doctree
docs/.doctrees/__intersphinx_cache__/: kivy_objects.inv
docs/_sources/: fontfinder.rst.txt  index.rst.txt  localizer.rst.txt  usage-no-i18n.rst.txt
examples/: DictBasedTranslator_example.py  dict_example.py  gettext_example.py
examples/locales/ar/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/en/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/fr/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/hi/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/ja/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/ko/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/ru/LC_MESSAGES/: gettext_example.mo  gettext_example.po
examples/locales/zh/LC_MESSAGES/: gettext_example.mo  gettext_example.po
kivy_garden/i18n/: exceptions.py  extract_msgids_from_string_literals.py  localizer.py
sphinx/: advanced-usage.rst  api-reference.rst  conf.py  index.rst  usage-advanced-ja.rst  usage-ja.rst  usage-no-i18n-ja.rst  usage-no-i18n.rst  usage.rst
src/kivy_garden/i18n/: _exceptions.py  fontfinder.py  localizer.py
src/kivy_garden/i18n/utils/: __init__.py  _extract_msgids_from_string_literals.py
tests/: test_extract_msgids_from_string_literals.py  test_fontfinder.py  test_localizer.py  test_utils_extract_msgids_from_string_literals.py
tests/locales/en/LC_MESSAGES/: test_localizer.mo  test_localizer.po
tests/locales/zh/LC_MESSAGES/: test_localizer.mo  test_localizer.po
