[tool.poetry]
name = "kivy-garden-i18n"
version = "0.1.0.dev2"
description = "i18n for Kivy"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/gottadiveintopython/i18n'
homepage = 'https://github.com/gottadiveintopython/i18n'
keywords = ['kivy']
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "kivy_garden", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
Kivy = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
