[tool.poetry]
name = "kivy-garden-i18n"
version = "0.2.0"
description = "i18n for Kivy"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/gottadiveintopython/i18n'
homepage = 'https://github.com/gottadiveintopython/i18n'
keywords = ['kivy']
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries',
    'Operating System :: OS Independent',
]
packages = [
    { include = "kivy_garden", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
Kivy = "^2.2.1"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract-msgids = 'kivy_garden.i18n.utils._extract_msgids_from_string_literals:cli_main'
