[project]
name = "kivy-garden-i18n"
version = "0.2.0"
description = "i18n for Kivy"
authors = [{ name = "Nattōsai Mitō", email = "flow4re2c@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = ["kivy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/gottadiveintopython/i18n"
Documentation = "https://gottadiveintopython.github.io/i18n/"

[project.scripts]
extract-msgids = "kivy_garden.i18n.utils._extract_msgids_from_string_literals:cli_main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "Kivy==2.3.1",
]
doc = [
    "sphinx>=8.1.3",
]

[tool.uv]
default-groups = ["dev", ]

[tool.uv.build-backend]
module-name = "kivy_garden.i18n"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
